优化1亿数据量下的性能